--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,13 +1,16 @@
 <footer>
   <div class="container">
-    <div class="row g-4">
-      <div class="col-lg-4 col-md-6">
+    <div class="row g-3">
+      <div class="col-lg-6 col-md-6">
         <h4>Casa de Campo</h4>
         <p>Disfruta de una experiencia única en nuestro alojamiento rural, rodeado de naturaleza y con todas las comodidades para hacer de tu estancia algo inolvidable.</p>
         <div class="social-links">
-          <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <!-- <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a> -->
+          <a href="https://www.instagram.com/elsosiegoguay/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <p class="m-0">
+            &#64;elsosiegoguay
+          </p>
+          <!-- <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a> -->
         </div>
       </div>
       
@@ -23,16 +26,16 @@
         </ul>
       </div>
       
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-4 col-md-6">
         <h5>Contacto</h5>
         <ul class="contact-info">
-          <li><i class="fas fa-map-marker-alt"></i> Carretera Rural km 5, Valle Verde</li>
-          <li><i class="fas fa-phone"></i> +34 912 345 678</li>
-          <li><i class="fas fa-envelope"></i> info casadecampo.com</li>
+          <li><i class="fas fa-map-marker-alt"></i> Chacra N 37 calle 11 entre calle 133 y 131</li>
+          <li><i class="fas fa-phone"></i> +54 9 3412 10-3956</li>
+          <li><i class="fas fa-envelope"></i> mvkulman&#64;gmail.com</li>
         </ul>
       </div>
       
-      <div class="col-lg-3 col-md-6">
+      <!-- <div class="col-lg-3 col-md-6">
         <h5>Boletín</h5>
         <p>Suscríbete para recibir nuestras ofertas especiales</p>
         <form class="newsletter-form">
@@ -43,13 +46,13 @@
             </button>
           </div>
         </form>
-      </div>
+      </div> -->
     </div>
     
     <div class="footer-bottom">
       <div class="row">
         <div class="col-md-6">
-          <p>&copy; {{year}} Casa de Campo. Todos los derechos reservados.</p>
+          <p>&copy; {{year}} Estancia el Sosiego. Todos los derechos reservados.</p>
         </div>
         <div class="col-md-6 text-md-end">
           <p>
