--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" routerLink="/">
-          <img src="assets/images/gallery/img17.jpeg" alt="Casa de Campo Logo" height="50">
+          <img src="assets/images/icons/logo.png" alt="Casa de Campo Logo">
         </a>
         
         <button class="navbar-toggler" type="button" (click)="toggleMobileMenu()" 
