--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -58,7 +58,7 @@
       &.img-offset {
         position: absolute;
         bottom: -50px;
-        right: -50px;
+        right: -10px;
         width: 60%;
         z-index: 1;
       }
@@ -208,6 +208,7 @@
     color: var(--gray-dark);
     margin-bottom: 20px;
     line-height: 1.7;
+    min-height: 150px;
   }
   
   .testimonial-author {
@@ -215,6 +216,9 @@
     align-items: center;
     
     .testimonial-avatar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 50px;
       height: 50px;
       border-radius: 50%;
