--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -21,7 +21,8 @@ footer {
   
   .social-links {
     margin-top: 1.5rem;
-    
+    display: flex;
+    align-items: center;
     a {
       display: inline-flex;
       align-items: center;
