--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,14 +4,9 @@ header {
   left: 0;
   width: 100%;
   z-index: 1000;
-  padding: 15px 0;
+  padding: 0;
   transition: all 0.3s ease;
   background-color: rgba(255, 255, 255, 0.95);
-  
-  &.scrolled {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px 0;
-  }
 
   .navbar-brand {
     font-family: var(--font-primary);
@@ -19,8 +14,17 @@ header {
     font-size: 1.8rem;
     
     img {
+      height: 100px;
       transition: all 0.3s ease;
     }
+  }
+
+    &.scrolled {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    // padding: 10px 0;
+    .navbar-brand img {
+      height: 50px;
+    }    
   }
   
   .nav-link {
