--- a/src/app/features/amenities/amenities.component.html
+++ b/src/app/features/amenities/amenities.component.html
@@ -19,7 +19,7 @@
           <h2>Disfruta de Nuestras <span class="text-primary">Instalaciones</span></h2>
           <div class="heading-divider mx-auto"></div>
         </div>
-        <p class="section-subtitle">En nuestra Casa de Campo nos esforzamos por ofrecerte una experiencia completa. Hemos creado espacios y servicios pensados para tu confort y disfrute, para que cada momento de tu estancia sea especial.</p>
+        <p class="section-subtitle">En El Sosiego nos esforzamos por ofrecerte una experiencia completa. Hemos creado espacios y servicios pensados para tu confort y disfrute, para que cada momento de tu estancia sea especial.</p>
       </div>
     </div>
   </div>
@@ -91,7 +91,7 @@
 </section>
 
 <!-- Accessibility Section -->
-<section class="section accessibility-section">
+<!-- <section class="section accessibility-section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6 mb-4 mb-lg-0">
@@ -133,10 +133,10 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Reviews Section -->
-<section class="section reviews-section bg-light-custom">
+<!-- <section class="section reviews-section bg-light-custom">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center mb-5">
@@ -172,13 +172,13 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- CTA Section -->
-<section class="cta-section">
+<section class="cta-section my-4">
   <div class="container text-center">
-    <h2 class="text-white">¿Quieres disfrutar de todos nuestros servicios?</h2>
-    <p class="text-white mb-4">Reserva tu estancia y vive una experiencia inolvidable</p>
-    <a routerLink="/reservar" class="btn btn-light btn-lg">Reservar ahora</a>
+    <h2 class="text-primary-ligth">¿Querés conocernos en persona?</h2>
+    <p class="text-primary mb-4">Reserva tu estancia y sé parte de nuestra historia</p>
+    <a routerLink="/reservar" class="btn btn-outline-primary btn-lg">Reservar ahora</a>
   </div>
 </section>
