--- a/src/app/features/gallery/gallery.component.html
+++ b/src/app/features/gallery/gallery.component.html
@@ -78,10 +78,10 @@
 </section>
 
 <!-- CTA Section -->
-<section class="cta-section">
+<section class="cta-section my-4">
   <div class="container text-center">
-    <h2 class="text-white">¿Te gustaría experimentarlo en persona?</h2>
-    <p class="text-white mb-4">Reserva tu estancia ahora y vive la experiencia completa</p>
-    <a routerLink="/reservar" class="btn btn-light btn-lg">Reservar ahora</a>
+    <h2 class="text-primary-ligth">¿Querés conocernos en persona?</h2>
+    <p class="text-primary mb-4">Reserva tu estancia y sé parte de nuestra historia</p>
+    <a routerLink="/reservar" class="btn btn-outline-primary btn-lg">Reservar ahora</a>
   </div>
 </section>
